--- a/style.css
+++ b/style.css
@@ -41,19 +41,19 @@ p {
     top:120px;
     left:0px;
     width:100vw;
-    height:auto;
+    height:40px;
     padding:5px 10px;
     background:#c0c0c0;
 }
 
-.dropbtn {
+#dropbtn {
     position:relative;
     float:left;
     margin-right:10px;
 }
 
 /* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
+#dropbtn:hover, #dropbtn:focus {
     background-color: #55cb66;
 }
 
@@ -66,7 +66,7 @@ p {
 }
 
 /* Dropdown Content (Hidden by Default) */
-.dropdown-content {
+#dropdown-content {
     display:none;
     position:absolute;
     background-color: #f9f9f9;
@@ -74,10 +74,11 @@ p {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     overflow:auto;
+    top:40px;
 }
 
 /* Links inside the dropdown */
-.dropdown-content a {
+#dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
@@ -85,7 +86,172 @@ p {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+#dropdown-content a:hover {background-color: #f1f1f1}
 
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+/* Show the dropdown menu (use JS to add this class to the #dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
+
+/* /////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+#dropbtn2 {
+    position:relative;
+    float:left;
+    margin-right:10px;
+}
+
+/* Dropdown button on hover & focus */
+#dropbtn2:hover, #dropbtn2:focus {
+    background-color: #55cb66;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown2 {
+    width:120px;
+    position:relative;
+    display: inline-block;
+    float:left;
+}
+
+/* Dropdown Content (Hidden by Default) */
+#dropdown-content2 {
+    display:none;
+    position:absolute;
+    background-color: #f9f9f9;
+    width: 140px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    overflow:auto;
+    top:40px;
+}
+
+/* Links inside the dropdown */
+#dropdown-content2 a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+#dropdown-content2 a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu (use JS to add this class to the #dropdown-content container when the user clicks on the dropdown button) */
+.show2 {display:block;}
+
+/* /////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+#dropbtn3 {
+    position:relative;
+    float:left;
+    margin-right:10px;
+}
+
+/* Dropdown button on hover & focus */
+#dropbtn3:hover, #dropbtn3:focus {
+    background-color: #55cb66;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown3 {
+    width:120px;
+    position:relative;
+    display: inline-block;
+    float:left;
+}
+
+/* Dropdown Content (Hidden by Default) */
+#dropdown-content3 {
+    display:none;
+    position:absolute;
+    background-color: #f9f9f9;
+    width: 140px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    overflow:auto;
+    top:40px;
+}
+
+/* Links inside the dropdown */
+#dropdown-content3 a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+#dropdown-content3 a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu (use JS to add this class to the #dropdown-content container when the user clicks on the dropdown button) */
+.show3 {display:block;}
+
+/* /////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+#dropbtn4 {
+    position:relative;
+    float:left;
+    margin-right:10px;
+}
+
+/* Dropdown button on hover & focus */
+#dropbtn4:hover, #dropbtn4:focus {
+    background-color: #55cb66;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown4 {
+    width:120px;
+    position:relative;
+    display: inline-block;
+    float:left;
+}
+
+/* Dropdown Content (Hidden by Default) */
+#dropdown-content4 {
+    display:none;
+    position:absolute;
+    background-color: #f9f9f9;
+    width: 140px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    overflow:auto;
+    top:40px;
+}
+
+/* Links inside the dropdown */
+#dropdown-content4 a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+#dropdown-content4 a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu (use JS to add this class to the #dropdown-content container when the user clicks on the dropdown button) */
+.show4 {display:block;}
+
+.dropdown:hover #dropdown-content {
+    display: block;
+}
+
+.dropdown2:hover #dropdown-content2 {
+    display: block;
+}
+
+.dropdown3:hover #dropdown-content3 {
+    display: block;
+}
+
+.dropdown4:hover #dropdown-content4 {
+    display: block;
+}
+
+.index {
+    position:relative;
+    margin:0px auto;
+    margin-top:180px;
+    width:70vw;
+    
+}
